--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg"> 2023 BUCKET LIST</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t4 center">포도랑 재밌는 토끼티해 보내기</div>
+        <div class="bucket img1-t4 center">포도랑 도현이랑 재밌는 토끼티해 보내기</div>
         <div class="bucket img2-t5 center">새집에서의 추억 잘 기록하기</div>
         <div class="bucket img3-t5 center">그림그리는 루틴 만들기</div>
         <div class="bucket img2-t4 center">일주일에 4번 운동하기</div>
         <div class="bucket img3-t4 center">물많이 마시고 건강한 음식먹기</div>
-        <div class="bucket img6-t5 center">포도랑 재밌는 토끼티해 보내기</div>
+        <div class="bucket img6-t5 center">커리어 포트폴리오 만들고 새로운 수입루트 만들기</div>
     </div>
 
 
